# RAG_PROJECT

backend/: .env  .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/chroma_data/: chroma.sqlite3
backend/models/: schemas.py
backend/routes/: chat.py  documents.py
backend/services/: chunking_service.py  document_service.py  embedding_service.py  llm_service.py  retrieval_service.py
frontend/: app.js  index.html  style.css
